--- a/app/modules/v1/route.ini
+++ b/app/modules/v1/route.ini
@@ -1,6 +1,6 @@
 ;routes
 routes.noauth_index.type="rewrite"
-routes.noauth_index.match="v1/product/id/:id/name/:name"
+routes.noauth_index.match="v1/index/id/:id/name/:name"
 routes.noauth_index.route.module=v1
 routes.noauth_index.route.controller=index
 routes.noauth_index.route.action=index
