--- a/conf/application.ini
+++ b/conf/application.ini
@@ -1,25 +1,28 @@
-[product]
+[common]
 ;支持直接写PHP中的已定义常量
 application.directory=APP_PATH "/app/"
 application.library=APP_PATH "/library/"
 application.modules=v1,Index
-application.dispatcher.throwException=true
-application.dispatcher.catchException=true
+application.dispatcher.throwException=false
+; application.dispatcher.catchException=true
 
-db.host = "localhost"
-db.username = "root"
-db.password = ""
-db.name = "test"
+db.host = "wdb.huanleguang.cn"
+db.username = "dev"
+db.password = "huanleguang123"
+db.name = "firecat"
 db.port = 3306
 db.charset="utf8"
 
+; redis.host = "127.0.0.1"
+; redis.timeout = 3
+; redis.db = 1
+; redis.port = 6379
 
-redis.host = "127.0.0.1"
-redis.timeout = 3
-redis.db = 1
-redis.port = 6379
+[develop : common]
 
 
+[release : common]
 
 
+[product : release]
  
